--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,11 @@
 .fa-bars.fa-solid::before {
   font-size: 2rem;
 }
+.headerMob {
+  position: fixed;
+  top: 0;
+  background-color: var(--col1);
+}
 /* @media (max-width: 767px) {
   .header {
     display: none;
