--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,8 +1,17 @@
+.header {
+  border-bottom: 1px solid var(--col2);
+  z-index: 5;
+  box-shadow: 0px 0px 10px 1px var(--col2);
+  background-color: var(--col1);
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
 .navlists > div > a {
   display: flex;
   position: relative;
-  font-weight: 600 !important;
-  padding: 0 0.7rem;
+  font-weight: 500 !important;
+  padding: 0 0.8%;
 }
 .navlists > div > a:hover {
   color: var(--col4);
