--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -3,6 +3,10 @@
     display: none;
   }
 }
+.sidebar{
+  z-index: 1;
+}
+
 .sidelist {
   position: fixed;
   width: 100%;
@@ -11,6 +15,7 @@
   background-color: var(--col1);
   border-top: 1px solid #aaa;
   transition: all 0.3s ease;
+  z-index: inherit;
 }
 .sidelist-hide {
   transform: translateX(-100%);
@@ -19,6 +24,7 @@
   position: fixed;
   bottom: 0;
   transition: all 0.05s ease;
+  z-index: 2;
   /* background-color: rgba(255, 255, 255, 0.1); */
 }
 .hide {
