--- a/src/App.css
+++ b/src/App.css
@@ -33,9 +33,18 @@
   font-size: 2rem;
 }
 .headerMob {
+  z-index: 2;
   position: fixed;
   top: 0;
   background-color: var(--col1);
+}
+h1{
+  font-size: 2rem !important;
+  font-weight: 600 !important;
+}
+h5{
+  font-size: 1.5rem !important;
+  font-weight: 600 !important;
 }
 /* @media (max-width: 767px) {
   .header {
