--- a/src/App.css
+++ b/src/App.css
@@ -44,3 +44,15 @@
 .dropdown {
   box-shadow: 1px 1px 10px 1px var(--col2);
 }
+
+
+h1{
+  font-size: 2rem !important;
+  font-weight: 600 !important;
+
+}
+
+h5{
+  font-size: 1.5rem !important;
+  font-weight: 500 !important;
+}
