--- a/src/components/about.css
+++ b/src/components/about.css
@@ -1,5 +1,5 @@
 .AboutContainer{
-    background-image: url("../assets/AboutBg.jpeg");
+    background-image: url("../assets/White-Background-PNG-Photos.png");
 
 
     background-position: center;
