--- a/src/components/carousel.css
+++ b/src/components/carousel.css
@@ -6,6 +6,7 @@
     width: 100%;
     height: 70vh;
     z-index: 0;
+    padding-top: 3.5rem;
   }
   .carouselM {
     height: 50vh;
@@ -49,15 +50,14 @@
     background-position: center;
   }
   .s1 {
-    background-image: url("../assets/byteproc slider1.png");
-   
+    background-image: url("../assets/Slider1.png");
   }
   .s2 {
-    background-image: url("../assets/byteproc slider2.png");
+    background-image: url("../assets/slider2.png");
   
   }
   .s3 {
-    background-image: url("../assets/byteproc slider3.png");
+    background-image: url("../assets/slider3.png");
   
   }
   /* .s4 {
@@ -88,19 +88,19 @@
     background-color: rgba(0, 0, 0, 0);
   } */
   .ms1{
-    background-image: url("../assets/byteproc slider1.png");
+    background-image: url("../assets/mob-slider1.png");
     background-size: 100% cover;
-    background-position: center 18%;
+    background-position: center 80%;
   }
   .ms2{
-    background-image: url("../assets/byteproc slider2.png");
+    background-image: url("../assets/mob-slider2.png");
     background-size: 100% cover;
-    background-position: center 18%;
+    background-position: center 40%;
   }
   .ms3{
-    background-image: url("../assets/byteproc slider3.png");
+    background-image: url("../assets/mob-slider3.png");
     background-size: 100% cover;
-    background-position: center 18%;
+    background-position: center 70%;
   }
   /* .ms4{
     background-image: url("../img/Carousel/mob-slider/s4.jpg");
