--- a/src/App.css
+++ b/src/App.css
@@ -56,3 +56,8 @@ h5{
   font-size: 1.5rem !important;
   font-weight: 500 !important;
 }
+
+h3{
+  font-size: 1.8rem !important;
+  font-weight: 550 !important;
+}
