--- a/src/components/carousel.css
+++ b/src/components/carousel.css
@@ -6,7 +6,7 @@
     width: 100%;
     height: 70vh;
     z-index: 0;
-    padding-top: 3.5rem;
+    /* padding-top: 3.5rem; */
   }
   .carouselM {
     height: 50vh;
