--- a/src/components/explore.css
+++ b/src/components/explore.css
@@ -1,7 +1,6 @@
 .explore{
-    /* padding: 100px 250px 50px 250px; */
-    padding-top: 100px;
-    padding-bottom: 50px;
+    padding: 5% 3%;
+    
     text-align: center;
     color: white;
     background-color: var(--col3);
