--- a/src/components/section4.css
+++ b/src/components/section4.css
@@ -46,7 +46,7 @@
     font-size: 12px;
     background-color: var(--col3);
     border: none;
-    width: 25%;
+    max-width: 190px;
     border-radius: 3px;
     margin-top: 5%;
     border: 1px solid var(--col3);
@@ -97,7 +97,7 @@
       max-width: 520px;
     }
   }
-  @media (max-width: 415px) {
+  /* @media (max-width: 415px) {
     .sec4_right {
       flex-direction: column;
       align-items: center;
@@ -108,5 +108,11 @@
     .Sec4_Card {
       max-width: 320px;
       min-width: 230px;
+      text-align: center;
     }
-  }
+    .bold{
+      text-align: center;
+      width: min-content;
+      margin: auto;
+    }
+  } */
