--- a/src/components/section4.css
+++ b/src/components/section4.css
@@ -35,13 +35,10 @@
   }
   
   .section_inner button {
-    /* background-color: var(--col3);
-    border: 1px solid var(--brand-color);
-    cursor: pointer;
-    padding: 1rem; */
+   
 
     color: white;
-    padding: 0.9rem 0.1rem;
+    padding: 0.9rem 0.7rem;
     cursor: pointer;
     font-size: 12px;
     background-color: var(--col3);
@@ -97,22 +94,21 @@
       max-width: 520px;
     }
   }
-  /* @media (max-width: 415px) {
-    .sec4_right {
-      flex-direction: column;
-      align-items: center;
-    }
-    .section_inner {
-      text-align: center;
-    }
+  @media (max-width: 415px) {
+    
     .Sec4_Card {
-      max-width: 320px;
-      min-width: 230px;
+      max-width: 150px;
       text-align: center;
     }
     .bold{
       text-align: center;
       width: min-content;
       margin: auto;
+      font-size: 1.5rem;
     }
-  } */
+    .sec4_right{
+      width: 100%;
+      text-align: center;
+      justify-content: center;
+    }
+  }
