--- a/src/components/carousel.css
+++ b/src/components/carousel.css
@@ -1,189 +1,158 @@
 .carousel {
-    --brand-color: #e97f23;
-    --logo-bg-blue: #e97f23;
-    --dark-blue-bg: #1b1525;
-    --text-color-1: #fff;
-    width: 100%;
-    height: 70vh;
-    z-index: 0;
-    /* padding-top: 3.5rem; */
-  }
+  --brand-color: #e97f23;
+  --logo-bg-blue: #e97f23;
+  --dark-blue-bg: #1b1525;
+  --text-color-1: #fff;
+  width: 100%;
+  height: 80vh;
+  z-index: 0;
+  /* padding-top: 3.5rem; */
+}
+.carouselM {
+  height: 50vh;
+}
+@media (min-width: 679px) {
   .carouselM {
-    height: 50vh;
+    display: none;
   }
-  @media (min-width: 679px) {
-    .carouselM {
-      display: none;
-    }
-  }
-  @media (max-width: 678px) {
-    .carousel {
-      display: none;
-    }
-    .slides {
-      height: 50vh !important;
-    }
-    .slides-inner {
-      height: 50vh !important;
-    }
-    .slides-inner h2 {
-      font-size: 1.8rem !important;
-      font-weight: 500 !important;
-    }
-    .slides-inner p {
-      font-size: 1.2rem;
-      margin-top: 0.3rem !important;
-    }
-  }
-  .mySwiper {
-    z-index: 0;
+}
+@media (max-width: 678px) {
+  .carousel {
+    display: none;
   }
   .slides {
-    width: 100%;
-    height: 70vh;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    height: 50vh !important;
   }
-  .carousel .slides{
-    background-size: 100% 100% ;
-    background-position: center;
-  }
-  .s1 {
-    background-image: url("../assets/Slider1.png");
-  }
-  .s2 {
-    background-image: url("../assets/slider2.png");
-  
-  }
-  .s3 {
-    background-image: url("../assets/slider3.png");
-  
-  }
-  /* .s4 {
-    background-image: url("../assets/byteproc\ slider1.png");
-    
-  }
-  .s5 {
-    background-image: url("../assets/byteproc\ slider1.png");
-    
-  }
-  .s6 {
-    background-image: url("../assets/byteproc\ slider1.png");
-    
-  }
-  .s7 {
-    background-image: url("../assets/byteproc\ slider1.png");
-    
-  }
-  .s8 {
-    background-image: url("../assets/byteproc\ slider1.png");
-    
-  }
-  .s9 {
-    background-image: url("../assets/byteproc\ slider1.png");
-   
-  } */
-  /* .slides-inner {
-    background-color: rgba(0, 0, 0, 0);
-  } */
-  .ms1{
-    background-image: url("../assets/mob-slider1.png");
-    background-size: 100% cover;
-    background-position: center 80%;
-  }
-  .ms2{
-    background-image: url("../assets/mob-slider2.png");
-    background-size: 100% cover;
-    background-position: center 40%;
-  }
-  .ms3{
-    background-image: url("../assets/mob-slider3.png");
-    background-size: 100% cover;
-    background-position: center 70%;
-  }
-  /* .ms4{
-    background-image: url("../img/Carousel/mob-slider/s4.jpg");
-    background-size: 100% cover;
-    background-position: center 18%;
-  }
-  .ms5{
-    background-image: url("../img/Carousel/mob-slider/ns1.jpg");
-    background-size: 100% cover;
-    background-position: center 28%;
-  }
-  .ms6{
-    background-image: url("../img/Carousel/mob-slider/ns2.jpg");
-    background-size: 100% cover;
-    background-position: center 28%;
-  }
-  .ms7{
-    background-image: url("../img/Carousel/mob-slider/ns3.jpg");
-    background-size: 100% cover;
-    background-position: center 28%;
-  }
-  .ms8{
-    background-image: url("../img/Carousel/mob-slider/ns4.jpg");
-    background-size: 100% cover ;
-    background-position: center 28%;
-  }
-  .ms9{
-    background-image: url("../img/Carousel/mob-slider/ns5.jpg");
-    background-size:  100% cover;
-    background-position: center 28%;
-  } */
   .slides-inner {
-    background-color: rgba(0, 0, 0, 0.3);
-    width: 100%;
-    height: 70vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    padding: 0 0.75rem;
+    height: 50vh !important;
   }
   .slides-inner h2 {
-    color: var(--text-color-1);
-    font-size: 3.5rem;
-    font-weight: 400;
-    animation: anim2 2s ease 0.1s 1;
-  }
-  .slides-inner {
-    color: var(--text-color-1);
-    font-size: 1.75rem;
+    font-size: 1.8rem !important;
+    font-weight: 500 !important;
   }
   .slides-inner p {
-    animation: anim1 2s ease-in 0.1s 1;
+    font-size: 1.2rem;
+    margin-top: 0.3rem !important;
   }
-  
-  @keyframes anim1 {
-    0% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
+}
+.mySwiper {
+  z-index: 0;
+}
+.slides {
+  width: 100%;
+  height: 80vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+/* .carousel .slides {
+  background-size: 100% 100%;
+  background-position: center;
+} */
+.s1 {
+  background-image: url("../assets/Slider1.png");
+}
+.s2 {
+  background-image: url("../assets/slider2.png");
+}
+.s3 {
+  background-image: url("../assets/slider3.png");
+}
+
+/* .slides-inner {
+    background-color: rgba(0, 0, 0, 0);
+  } */
+.ms1 {
+  background-image: url("../assets/mob-slider1.png");
+  background-size: 100% cover;
+  background-position: center 80%;
+}
+.ms2 {
+  background-image: url("../assets/mob-slider2.png");
+  background-size: 100% cover;
+  background-position: center 40%;
+}
+.ms3 {
+  background-image: url("../assets/mob-slider3.png");
+  background-size: 100% cover;
+  background-position: center 70%;
+}
+
+.slides-inner {
+  background-color: rgba(0, 0, 0, 0.3);
+  width: 100%;
+  height: 80vh;
+  /* display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center; */
+  padding: 0 0.75rem;
+  color: var(--text-color-1);
+  font-size: 1.75rem;
+}
+.slides-text {
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+  margin: auto 5%;
+}
+.slides-inner h2 {
+  color: var(--text-color-1);
+  font-size: 3.5rem;
+  font-weight: 400;
+  animation: anim2 2s ease 0.1s 1;
+}
+
+.slides-inner p {
+  font-weight: 400;
+  font-size: 1.3rem;
+  text-shadow: 2px 2px 12px #aaa;
+  margin: 0.85rem 0;
+  animation: anim1 2s ease-in 0.1s 1;
+}
+.slides-text > button {
+  border: 1px solid rgba(155, 155, 155, 0.3);
+  padding: 0.2rem 0.6rem;
+  width: max-content;
+  background-color: rgba(155, 155, 155, 0.3);
+  text-transform: capitalize;
+  font-size: 1.2rem;
+  box-shadow: 1px 1px 15px 3px rgba(68, 62, 62, 0.3);
+}
+.slides-text > button:hover{
+  background-color: rgba(97, 93, 93, 0.3);
+}
+
+@keyframes anim1 {
+  0% {
+    opacity: 0;
   }
-  @keyframes anim2 {
-    0% {
-      transform: translateY(-50vh);
-      color: var(--logo-bg-blue);
-    }
-    10%,
-    55% {
-      transform: translateY(0);
-    }
-    25% {
-      transform: translateY(-30vh);
-      color: var(--logo-bg-blue);
-    }
-    85% {
-      transform: translateY(-20vh);
-      color: var(--logo-bg-blue);
-    }
-    100% {
-      transform: translateY(0);
-      color: var(--logo-bg-blue);
-    }
+  100% {
+    opacity: 1;
   }
+}
+@keyframes anim2 {
+  0% {
+    transform: translateY(-50vh);
+    color: var(--logo-bg-blue);
+  }
+  10%,
+  55% {
+    transform: translateY(0);
+  }
+  25% {
+    transform: translateY(-30vh);
+    color: var(--logo-bg-blue);
+  }
+  85% {
+    transform: translateY(-20vh);
+    color: var(--logo-bg-blue);
+  }
+  100% {
+    transform: translateY(0);
+    color: var(--logo-bg-blue);
+  }
+}
