updated home page

--- a/src/components/footer2.css
+++ b/src/components/footer2.css
@@ -1,7 +1,7 @@
 .footer2 {
   --text-color-1: #fff;
   padding: 0.5% 0.3rem;
-  background-color: #312c3a;
+  background-color: #161e36;
   color: var(--text-color-1);
   font-size: 0.9rem;
 }
