added contact page, full time page

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   --col2: #aaa;
   --col3: #4560af;
   --col4: #344484;
+  --brand-color:#4560af;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
