--- a/src/components/footer2.css
+++ b/src/components/footer2.css
@@ -6,14 +6,28 @@
   font-size: 0.9rem;
 }
 
-@media (max-width: 710px) {
+@media (max-width: 992px) {
   .footer2 {
     text-align: center;
     justify-content: center !important;
     padding-top: 0.75rem;
     padding-bottom: 0.75rem;
   }
-  .footer2 > div {
+  .footer2-top {
+    width: 100%;
+  }
+  .footer2-bottom {
+    width: 100%;
     margin-top: 0.5rem;
+  }
+}
+
+@media (max-width: 710px) {
+  .footer2 {
+    flex-direction: column !important;
+  }
+  .footer2-top {
+    flex-direction: column;
+    align-items: center;
   }
 }
