--- a/src/components/services.css
+++ b/src/components/services.css
@@ -1,46 +1,43 @@
-#services{
-    padding: 30px 30px;
-    color: white;
-    background-image: url("../assets/services.jpg");
+#services {
+  padding: 30px 30px;
+  color: white;
+  background-image: url("../assets/services.jpg");
 }
 
-.services-list{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px,1fr));
-    grid-gap: 40px;
-    margin-top: 20px;
-    
+.services-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-gap: 40px;
+  margin-top: 20px;
 }
 
-.sub-title{
-    color: #262626;
-    text-align: center;
+.sub-title {
+  color: #262626;
+  text-align: center;
 }
 
-.services-list >div{
-    max-width: 450px;
-    background: var(--col3);
-    padding: 40px;
-    /* font-size: 13px; */
-    /* font-weight: 300; */
-    border-radius: 10px;
-    transition: background 0.5s, transform 0.5s;
-    color: var(--col1);
-    
+.services-list > div {
+  max-width: 450px;
+  background: var(--col3);
+  padding: 40px;
+  /* font-size: 13px; */
+  /* font-weight: 300; */
+  border-radius: 10px;
+  transition: background 0.5s, transform 0.5s;
+  color: var(--col1);
 }
-@media(max-width:450px){
-    .services-list >div{
-        padding: 1.5rem;
-    }
-    .services-list p{
-        font-size: 1rem;
-    }
+@media (max-width: 450px) {
+  .services-list > div {
+    padding: 1.5rem;
+  }
+  .services-list p {
+    font-size: 1rem;
+  }
 }
 
-.services-list div i{
-    font-size: 50px;
-    margin-bottom: 30px;
-
+.services-list div i {
+  font-size: 50px;
+  margin-bottom: 30px;
 }
 
 /* .services-list div h2{
@@ -50,25 +47,46 @@
     color: var(--col1);
 } */
 
-.services-list>div a{
-    text-decoration: none;
-    color: #fff;
-    /* font-size: 12px; */
-    /* margin-top: 20px; */
-    display: inline-block;
+.services-list > div a {
+  text-decoration: none;
+  color: #fff;
+  /* font-size: 12px; */
+  /* margin-top: 20px; */
+  display: inline-block;
 }
-.services-list p{
-    color: var(--col1);
-    font-size: .9rem;
-}
-
-.services-list>div:hover{
-    background: var(--col4);
-    transform: translateY(-10px);
+.services-list p {
+  color: var(--col1);
+  font-size: 0.9rem;
 }
 
-@keyframes servicesAnimation{
-    0%{
-        
-    }
+.services-list > div:hover {
+  background: var(--col4);
+  transform: translateY(-10px);
 }
+
+.services-list > div > div {
+  cursor: pointer;
+}
+
+/* .service1 {
+  animation: anim5 0.1s ease 0 1;
+}
+.service2 {
+  animation: anim5 0.2s ease 0.1s 1;
+}
+.service3 {
+  animation: anim5 0.3s ease 0.2s 1;
+}
+.service4 {
+  animation: anim5 0.4s ease 0.3s 1;
+}
+
+@keyframes anim6 {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+} */
