--- a/src/components/services.css
+++ b/src/components/services.css
@@ -40,18 +40,21 @@
   margin-bottom: 30px;
 }
 
-/* .services-list div h2{
-    font-size: 30px !important;
-    font-weight: 500 !important;
-    margin-bottom: 10px !important;
-    color: var(--col1);
-} */
+.img-icon-pd {
+  border: 1px solid var(--col3);
+  border-radius: 50%;
+  background-color: var(--col1);
+  transition: all 0.5s ease;
+}
+
+.services-list > div:hover .img-icon-pd {
+  border-color: var(--col1);
+  background-color: var(--col5);
+}
 
 .services-list > div a {
   text-decoration: none;
   color: #fff;
-  /* font-size: 12px; */
-  /* margin-top: 20px; */
   display: inline-block;
 }
 .services-list p {
