--- a/src/components/help.css
+++ b/src/components/help.css
@@ -129,7 +129,7 @@
   place-items: center;
   transition: all 0.5s ease;
 }
-/* .help-sub > div:hover .help-icon {
-  background-color: var(--col4);
+.help-sub > div:hover .help-icon {
+  background-color: var(--col5);
   border-color: var(--col1);
-} */
+}
