--- a/src/components/mvv.css
+++ b/src/components/mvv.css
@@ -1,16 +1,15 @@
-
-
-@media(max-width:768px){
-    .mvv>div{
-        width: 100%;
-    
-    }
-    .mvv>div:nth-child(2){
-        padding-left: 1rem;
-
-    }
+.mvv > div {
+  height: 460px;
 }
-.mvv-active{
-    background-color: var(--col3);
-    color:var(--col1)
+@media (max-width: 768px) {
+  .mvv > div {
+    width: 100%;
+  }
+  .mvv > div:nth-child(2) {
+    padding-left: 1rem;
+  }
+}
+.mvv-active {
+  background-color: var(--col3);
+  color: var(--col1);
 }
