--- a/src/components/breadCrump.css
+++ b/src/components/breadCrump.css
@@ -1,6 +1,6 @@
 .breadcrump {
   width: 100%;
-  background-image: url("../assets/bg-1.jpeg");
+  background-image: url("../assets/bread1.jpg");
   background-size: cover;
   background-position: center;
 }
@@ -12,7 +12,7 @@
   flex-direction: column;
   align-items: center;
   color: var(--text-color-1);
-  background-color: rgba(69, 96, 175, 0.95);
+  background-color: rgba(69, 96, 175, 0.5);
 }
 
 .horizontal-line {
