--- a/src/components/help.css
+++ b/src/components/help.css
@@ -15,6 +15,7 @@
   padding: 5% 2%;
   color: white;
   margin: 0rem 2rem -2rem 2rem;
+  
 }
 .help-img {
   width: 100px;
@@ -38,7 +39,7 @@
   flex-wrap: wrap;
   align-items: stretch;
   position: relative;
-  /* z-index: -1; */
+  z-index: -1;
 }
 
 .help-below-left {
@@ -129,7 +130,7 @@
   place-items: center;
   transition: all 0.5s ease;
 }
-.help-sub > div:hover .help-icon {
+/* .help-sub > div:hover .help-icon {
   background-color: var(--col5);
   border-color: var(--col1);
-}
+} */
