--- a/src/components/address.css
+++ b/src/components/address.css
@@ -1,38 +1,42 @@
-.address-cnt{
-    position: fixed;
-    top:0;
-    right: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: rgba(69, 96, 175, 0.3);
-    z-index: 5;
+.address-cnt {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: rgba(69, 96, 175, 0.3);
+  z-index: 5;
 }
-.hide-right{
-    transform: translateX(100%);
+.hide-right {
+  transform: translateX(100%);
 }
-.address{
-    position: fixed;
-    top:0;
-    right: 0;
-    bottom: 0;
-    overflow-y: auto;
-    /* height: 140vh; */
-    width: 340px;
-    padding: 2rem 3rem;
-    display: flex;
-    flex-direction: column;
-    background-color: #fff;
-    z-index: 5;
-    border-left:1px solid #aaa;
-    box-shadow: 1px 1px 10px 2px #aaa;
-    
+.address {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  overflow-y: auto;
+  /* height: 140vh; */
+  width: 340px;
+  padding: 2rem 3rem;
+  display: flex;
+  flex-direction: column;
+  background-color: #fff;
+  z-index: 5;
+  border-left: 1px solid #aaa;
+  box-shadow: 1px 1px 10px 2px #aaa;
 }
-.address .fa-xmark{
-    position: absolute;
-    top:.3rem;
-    left: .3rem;
-    font-size: 1.5rem;
+.address .fa-xmark {
+  position: absolute;
+  top: 0.3rem;
+  left: 0.3rem;
+  font-size: 1.5rem;
 }
-.address a:hover{
-color:var(--col3)
+.address a:hover {
+  color: var(--col3);
+}
+.city-list {
+  /* border: 1px solid black; */
+  margin-top: 0.4rem;
+  margin-bottom: 0.4rem;
 }
